--- a/css/orange_on_black.css
+++ b/css/orange_on_black.css
@@ -1,7 +1,8 @@
 html, body {
   height: 100%;
   width: 100%;
-  background-image: radial-gradient(#110708, #0D0208);
+  background-image: url('bg.png');
+  background-color: black;
   color: #fbc41f;
   text-shadow: 0 0 4px #F68A27;
   margin: 0;
@@ -64,7 +65,7 @@ span {
 
 .content li:active {
 	background-color: #fbc41f;
-	color: #110708;
+	color: black;
 }
 
 .content {
@@ -73,7 +74,7 @@ span {
   margin-top: 0.2em;
   margin-left: -0.1em;
   visibility: hidden;
-  background-color: #110708;
+  background-color: black;
   border-width: 0.3em;
   border-style: double;
   border-top: 0;
@@ -100,7 +101,7 @@ span {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url("../bg.png");
+  background-image: url("bg.png");
   background-blend-mode: multiply;
   z-index: 9999;
   pointer-events: none;
