--- a/NexusHome/css/orange_on_black.css
+++ b/NexusHome/css/orange_on_black.css
@@ -102,7 +102,7 @@ span {
   top: 0;
   left: 0;
   background-image: url("bg.png");
-  background-blend-mode: multiply;
+  background-blend-mode: repeat;
   z-index: 9999;
   pointer-events: none;
 }
